--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Sync</a> -->
 
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/nudges.png" alt="alternative" style=" width: 100px; height: 100px;"></a> 
+            <a class="navbar-brand logo-image" href="index.html"><img src="images/heart-rate.png" alt="alternative" style=" width: 100px; height: 100px;"></a> 
             
             <!-- Mobile Menu Toggle Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,8 +81,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h1>Nudges for CVD</h1>
-                        <p class="p-large p-heading">Behavioral Economic incentives applied to the prevention and detection of cardiovascular diseases.</p>
+                        <h1>m-Health for CVD</h1>
+                        <p class="p-large p-heading">Mobile Health applied to the prevention and detection of cardiovascular diseases.</p>
 		    </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
