--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <link rel="stylesheet" href="css/line-icons.css">
      <script src="https://kit.fontawesome.com/a1a4130399.js" crossorigin="anonymous"></script>
 	<!-- Favicon  -->
-    <link rel="icon" href="images/nudges.png">
+    <link rel="icon" href="images/heart-rate.png">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
