--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#description">Articles per type<span class="sr-only">(current)</span></a>
+                        <a class="nav-link page-scroll" href="#description">Application in Articles<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#features">Systematic Literature Reviews and Surveys</a>
+                        <a class="nav-link page-scroll" href="#features">Apps in Play Store</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#faq">Randomized Control Trials</a>
+                        <a class="nav-link page-scroll" href="#faq">Stratified Apps</a>
                     </li>
                 </ul>
             </div>
@@ -120,7 +120,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h2>Article distribution per type</h2>
+                        <h2>Mobile Apps in Articles</h2>
                         <p>112 full text articles were retrieved. After applying the exclussion criteria 71 articles remained. Most of them were either Systematic Literature Reviews, Surveys or Trials. </p>
                         <p>For all of the articles the following data was extracted </p>
                         <ul class="list li-space-lg">
@@ -134,7 +134,8 @@
                             <li>Target user: Patients, Caregivers or Providers</li>
                             <li>Additional comments</li>
                         </ul>
-                    </div> <!-- end of text-container -->
+                    </div>
+                    <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx" target="_blank"></i>Article Mobile Applications</a> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
