--- a/index.html
+++ b/index.html
@@ -110,32 +110,22 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                    </div>
-                    <div class="text-container">
-                    </div>
-                    <div class="image-container">
-                        <iframe title="Distribution of reviewed articles by study type" aria-label="Column Chart" id="datawrapper-chart-h8HQ8" src="https://datawrapper.dwcdn.net/h8HQ8/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="186"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-                        </script>
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of col -->
-                <div class="col-lg-6">
-                    <div class="text-container">
                         <h2>Mobile Apps in Articles</h2>
-                        <p>112 full text articles were retrieved. After applying the exclussion criteria 71 articles remained. Most of them were either Systematic Literature Reviews, Surveys or Trials. </p>
-                        <p>For all of the articles the following data was extracted </p>
+                        <p>After the articles were extracted from the query search in Google Scholar, these were reviewed to find if they mention any mobile application developed or tested. If so, the app was reviewed to retrieve the following fields.</p>
                         <ul class="list li-space-lg">
-                            <li>Type of study</li>
-                            <li>Type of nudge evaluated</li>
-                            <li>Targeted risk factor</li>
-                            <li>CVD focused</li>
-                            <li>mHealth usage</li>
-                            <li>Primary or Secondary Prevention</li>
-                            <li>Demographic variable</li>
-                            <li>Target user: Patients, Caregivers or Providers</li>
-                            <li>Additional comments</li>
+                            <li>App name</li>
+                            <li>App description</li>
+                            <li>Risk factor association</li>
+                            <li>Primary Outcome</li>
+                            <li>Operative System</li>
+                            <li>Available in Markets/li>
+                            <li>Minimum version</li>
+                            <li>Download link</li>
+                            <li>APK weight</li>
+                            <li>Wearable use</li>
                         </ul>
                     </div>
-                    <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx" target="_blank"></i>Article Mobile Applications</a> <!-- end of text-container -->
+                    <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx&gid=0" target="_blank"></i>Article Mobile Applications</a> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
