--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                             <li>Wearable use</li>
                         </ul>
                     </div>
+                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pubhtml?gid=1677931408&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                     <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx&gid=0" target="_blank"></i>Article Mobile Applications</a> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
