--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div id="description" class="basic-1">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col">
                     <div class="text-container">
                         <h2>Mobile Apps in Articles</h2>
                         <p>After the articles were extracted from the query search in Google Scholar, these were reviewed to find if they mention any mobile application developed or tested. If so, the app was reviewed to retrieve the following fields.</p>
