--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
                             <li>Wearable use</li>
                         </ul>
                     </div>
-                    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pubhtml?gid=1677931408&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                    <div class="image-container">
+                        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pubhtml?gid=1677931408&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                        </script>
+                    </div>          
                     <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx&gid=0" target="_blank"></i>Article Mobile Applications</a> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -138,15 +141,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Systematic Literature Reviews and Surveys</h2>
-                    <p-small>For articles of this category the following data was extracted </p-smal>
+                    <h2>Mobile Appplications in Play Store</h2>
+                    <p-small>A query was used in Play Store to retrive all of the apps associated with cardiovascular diseases. After running the query, all the applications were reviewed to fill the following fields:</p-smal>
                     <ul class="list li-space-lg">
-                        <li>Number of articles evaluated</li>
-                        <li>Number of articles per risk factor</li>
-                        <li>Number of articles per type of nudge</li>
-                        <li>Number of articles with significant results</li>
-                        <li>Number of articles with long term evaluation of nudges</li>
-                        <li>Time frame evaluated</li>
+                        <li>Link of the application</li>
+                        <li>Category</li>
+                        <li>Last Update Date</li>
+                        <li>Number of downloads</li>
+                        <li>Price</li>
+                        <li>Rating</li>
+                        <li>3 main features</li>
                     </ul>
                     <div class="image-container">
                         <iframe title="Distribution of reviewed articles by study type" aria-label="Column Chart" id="datawrapper-chart-h8HQ8" src="https://datawrapper.dwcdn.net/h8HQ8/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="186"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
