--- a/index.html
+++ b/index.html
@@ -153,10 +153,9 @@
                         <li>Rating</li>
                         <li>3 main features</li>
                     </ul>
-                    <div class="image-container">
-                        <iframe title="Distribution of reviewed articles by study type" aria-label="Column Chart" id="datawrapper-chart-h8HQ8" src="https://datawrapper.dwcdn.net/h8HQ8/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="186"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-                        </script>
-                    </div> <!-- end of image-container -->
+                    <div class="center">
+                        <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx&gid=0" target="_blank"></i>Stratification for education category</a> <!-- end of text-container -->
+                    </div>
                 </div> <!-- end of div -->
             </div> <!-- end of div -->
         </div> <!-- end of container -->
@@ -169,20 +168,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Controlled Trials, Randomized Controlled Trials and Non-Randomized Controlled Trials</h2>
-                    <p class="p-heading">CT , RCT and NRCT</p>
-                    <p>For articles of this category the following data was extracted </p>
-                    <ul class="list li-space-lg">
-                        <li>Number of participants per intervention</li>
-                        <li>Number of participants per control group</li>
-                        <li>Performance metrics</li>
-                        <li>Intervention evaluated</li>
-                    </ul>
-                    <div class="image-container">
-                        <iframe title="Distribution of reviewed articles by study type" aria-label="Column Chart" id="datawrapper-chart-h8HQ8" src="https://datawrapper.dwcdn.net/h8HQ8/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="186"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-                        </script>
-                    </div> <!-- end of image-container -->
-                    <a class="btn-solid-lg" href="https://play.google.com/store/apps/details?id=co.edu.uniandes.tsdl.angel" target="_blank"></i>Data CT, RCT and NRCT</a>
+                    <h2>Stratification of mobile applications found in Play Store</h2>
+                    <p>After all of the apps were extracted they were sorted by rating and last update date to select the ones that were better to test.</p>
+                    <p>30 apps were selected from the categories Risk Calculator, Signal Monitoring and Diet.</p>
+                    <p>10 apps were selected from the subcategories of Education.</p>
+                    <div class="center">
+                        <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx&gid=0" target="_blank"></i>General Stratification</a> <!-- end of text-container -->
+                    </div>  
+                    <div class="center">
+                        <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx&gid=0" target="_blank"></i>Stratification for education category</a> <!-- end of text-container -->
+                    </div>
                 </div> <!-- end of div -->
             </div> <!-- end of div -->
         </div> <!-- end of container -->
