--- a/index.html
+++ b/index.html
@@ -125,9 +125,6 @@
                             <li>Wearable use</li>
                         </ul>
                     </div>
-                    <div class="image-container">
-                        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pubhtml?gid=1677931408&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-                    </div>
                     <div class="center">
                         <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx&gid=0" target="_blank"></i>Article Mobile Applications</a> <!-- end of text-container -->
                     </div>                              
@@ -154,7 +151,7 @@
                         <li>3 main features</li>
                     </ul>
                     <div class="center">
-                        <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx&gid=0" target="_blank"></i>Stratification for education category</a> <!-- end of text-container -->
+                        <a class="btn-solid-lg" href="https://docs.google.com/spreadsheets/d/e/2PACX-1vQld1oiDuVO5_l_g3_Eaksu_-Fhv4QyDKZ98XkwBnXWxNi-MDh-lR2JIXA0zK7SRw/pub?output=xlsx&gid=0" target="_blank"></i>Apps for CVD in Play Store</a> <!-- end of text-container -->
                     </div>
                 </div> <!-- end of div -->
             </div> <!-- end of div -->
